Fix text alignment of the UnitNavNextComponent
#702

--- a/projects/common/assets/common-styles.css
+++ b/projects/common/assets/common-styles.css
@@ -81,6 +81,13 @@ blockquote p {
   justify-content: flex-end;
 }
 
+.fx-row-end-center {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 .fx-column-start-stretch {
   display: flex;
   align-items: stretch;
